--- a/config/corne.conf
+++ b/config/corne.conf
@@ -9,5 +9,5 @@ CONFIG_ZMK_DISPLAY=y
 CONFIG_ZMK_KSCAN_DEBOUNCE_PRESS_MS=1
 CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=20
 
-CONFIG_ZMK_STUDIO=y
-CONFIG_ZMK_STUDIO_LOCKING=n
+# CONFIG_ZMK_STUDIO=y
+# CONFIG_ZMK_STUDIO_LOCKING=n
