Add new remote and project to west.yml

--- a/config/west.yml
+++ b/config/west.yml
@@ -2,10 +2,15 @@ manifest:
   remotes:
     - name: zmkfirmware
       url-base: https://github.com/zmkfirmware
+    - name: macaron
+      url-base: https://github.com/ronnePascua
   projects:
     - name: zmk
       remote: zmkfirmware
       revision: v0.3
       import: app/west.yml
+    - name: nice-view-peripheral-animation
+      remote: macaron
+      revision: main
   self:
     path: config
